[gd_scene load_steps=9 format=2]

[ext_resource path="res://tanks/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://tanks/FT_Tank.gd" type="Script" id=2]
[ext_resource path="res://assets/tanks.png" type="Texture" id=3]
[ext_resource path="res://assets/spr_smoke_strip24.png" type="Texture" id=4]

[sub_resource type="Curve" id=1]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0.0231993, 0.493175 ), 0.0, 0.0, 0, 0, Vector2( 0.271846, 0.781782 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]

flags = 4
width = 2048
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
scale_curve = SubResource( 2 )
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.35
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Animation", "Gravity", "Initial Velocity", "Scale" ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 32.4708, 20.041 )

[node name="FT_Tank" instance=ExtResource( 1 )]

position = Vector2( 740, 460 )
script = ExtResource( 2 )
Bullet = null
max_speed = 400
rotation_speed = 5.0
gun_cooldown = 1.0
max_health = 500
burn_rate = 0.05

[node name="Turret" parent="." index="2"]

texture = ExtResource( 3 )
region_rect = Rect2( 778, 85, 90, 66 )

[node name="Flash" parent="Turret" index="1"]

position = Vector2( 85, 0 )
scale = Vector2( 0.804629, 0.804629 )
z_index = -1
texture = null
region_rect = Rect2( 527, 108, 103, 45 )

[node name="Flames" type="Particles2D" parent="Turret" index="2"]

show_behind_parent = true
position = Vector2( 65, 0 )
scale = Vector2( 200, 25 )
emitting = true
amount = 75
lifetime = 0.4
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 3 )
texture = ExtResource( 4 )
normal_map = null
h_frames = 24
v_frames = 1
_sections_unfolded = [ "Drawing", "Material", "Process Material", "Textures", "Time", "Transform", "Visibility", "Z Index" ]

[node name="FlameCone" type="Area2D" parent="Turret" index="3"]

visible = false
position = Vector2( 148.823, 0.0409851 )
scale = Vector2( 2.5, 1 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Turret/FlameCone" index="0"]

shape = SubResource( 4 )

[node name="AnimationPlayer" parent="." index="5"]

autoplay = "muzzle_flash"

[node name="BurnTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="body_entered" from="Turret/FlameCone" to="." method="_on_FlameCone_body_entered"]

[connection signal="body_exited" from="Turret/FlameCone" to="." method="_on_FlameCone_body_exited"]

[connection signal="timeout" from="BurnTimer" to="." method="_on_BurnTimer_timeout"]


